--- a/resume.html
+++ b/resume.html
@@ -3,5 +3,5 @@ layout: page
 title: "resume" 
 ---
 <head>  
-<meta http-equiv="refresh" content="0;url=https://cool-wangjun.github.io/resume.html">   
+<meta http-equiv="refresh" content="0;url=https://cool-wangjun.github.io/resume/resume.html">   
 </head> 
